[gd_scene load_steps=5 format=3 uid="uid://cvyqvkbgjt7bg"]

[ext_resource type="Script" path="res://Code/Managers/LevelManager.gd" id="1_teiuy"]
[ext_resource type="PackedScene" uid="uid://q2eyupn7k7l2" path="res://Scenes/Frogs/FrogTypes/basic_frog.tscn" id="1_tfouu"]
[ext_resource type="PackedScene" uid="uid://mv06512gy8op" path="res://Scenes/lillypad.tscn" id="2_5w5hf"]
[ext_resource type="PackedScene" uid="uid://cllbpv27v30g8" path="res://Scenes/Frogs/frog_slot.tscn" id="4_2w2l3"]

[node name="LevelManager" type="Node2D" node_paths=PackedStringArray("frog_slots")]
script = ExtResource("1_teiuy")
frog_slots = [NodePath("Lillypads/Lillypad/FrogSlot"), NodePath("Lillypads/Lillypad2/FrogSlot"), NodePath("Lillypads/Lillypad3/FrogSlot"), NodePath("Frogs/BasicFrog/SlotOnHead"), NodePath("Frogs/BasicFrog2/SlotOnHead"), NodePath("Frogs/BasicFrog3/SlotOnHead"), NodePath("OtherSlots/FrogSlot"), NodePath("OtherSlots/FrogSlot2"), NodePath("OtherSlots/FrogSlot3"), NodePath("OtherSlots/FrogSlot4")]

[node name="Frogs" type="Node2D" parent="."]

[node name="BasicFrog" parent="Frogs" instance=ExtResource("1_tfouu")]
position = Vector2(882, 339)

[node name="BasicFrog2" parent="Frogs" instance=ExtResource("1_tfouu")]
position = Vector2(289, 293)

[node name="BasicFrog3" parent="Frogs" instance=ExtResource("1_tfouu")]
position = Vector2(563, 156)

[node name="Lillypads" type="Node2D" parent="."]

[node name="Lillypad" parent="Lillypads" instance=ExtResource("2_5w5hf")]
position = Vector2(190, 587)

[node name="Lillypad2" parent="Lillypads" instance=ExtResource("2_5w5hf")]
position = Vector2(554, 583)

[node name="Lillypad3" parent="Lillypads" instance=ExtResource("2_5w5hf")]
position = Vector2(957, 589)

[node name="OtherSlots" type="Node2D" parent="."]

[node name="FrogSlot" parent="OtherSlots" instance=ExtResource("4_2w2l3")]
position = Vector2(37, 602)

[node name="FrogSlot2" parent="OtherSlots" instance=ExtResource("4_2w2l3")]
position = Vector2(367, 602)

[node name="FrogSlot3" parent="OtherSlots" instance=ExtResource("4_2w2l3")]
position = Vector2(747, 599)

[node name="FrogSlot4" parent="OtherSlots" instance=ExtResource("4_2w2l3")]
position = Vector2(1115, 606)

[connection signal="frog_deselected" from="Frogs/BasicFrog" to="." method="_on_frog_deselected"]
[connection signal="frog_deselected" from="Frogs/BasicFrog2" to="." method="_on_frog_deselected"]
[connection signal="frog_deselected" from="Frogs/BasicFrog3" to="." method="_on_frog_deselected"]

[editable path="Frogs/BasicFrog"]
[editable path="Frogs/BasicFrog2"]
[editable path="Frogs/BasicFrog3"]
[editable path="Lillypads/Lillypad"]
[editable path="Lillypads/Lillypad2"]
[editable path="Lillypads/Lillypad3"]
